Fixing error handling because its becoming a PITA

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.79"
 axum = "0.7.4"
+chrono = { version = "0.4.32", features = ["serde"] }
 dotenvy = "0.15.7"
 diesel_migrations = "2.1"
 diesel = { version = "2.1", features = ["postgres", "numeric", "chrono"] }
