--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.79"
-axum = "0.7.4"
+actix-web = "4"
 chrono = { version = "0.4.32", features = ["serde"] }
 dotenvy = "0.15.7"
 diesel_migrations = "2.1"
@@ -15,6 +15,7 @@ reqwest = { version = "0.11", features = ["json"] }
 serde_json = "1.0.111"
 serde = { version = "1.0.195", features = ["derive"] }
 tokio = { version = "1.35.1", features = ["full"] }
+thiserror = "1.0"
 
 # Logging
 tracing = "0.1.40"
