--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 anyhow = "1.0"
 actix-web = "4"
 chrono = { version = "0.4", features = ["serde"] }
+derive_builder = "0.20"
 dotenvy = "0.15"
 clap = { version = "4", features = ["derive", "env"] }
 redis = { version = "0.24", features = ["tokio-comp"] }
