--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,4 @@
-workspace = { members = ["parser", "migration"] }
+workspace = { members = ["parser", "migration", "slackify"] }
 
 [package]
 name = "gratitude_box"
@@ -36,3 +36,7 @@ tracing-subscriber = "0.3"
 
 migration = { path = "migration" }
 parser = { path = "parser" }
+slackify = { path = "slackify" }
+
+[target.'cfg(not(target_env = "msvc"))'.dependencies]
+tikv-jemallocator = "0.5"
